--- a/src/app/index.css
+++ b/src/app/index.css
@@ -10,11 +10,11 @@
 }
 
 html,
-body, 
+body,
 #app {
   min-height: 100vh;
   width: 100%;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
