refactor photo card, added semantic and responsive images

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -14,15 +14,15 @@ body,
 #app {
   min-height: 100vh;
   width: 100%;
-  font-family: "Roboto", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Roboto, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
   font-synthesis: none;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 body {
@@ -56,10 +56,21 @@ h6 {
   overflow-wrap: break-word;
 }
 
-
 .container {
   max-width: 1480px;
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
