completed gallery and favorite photos pages

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -8,6 +8,7 @@
   --c-sunset-orange: #FA5252;
   --c-fruit-salad: #40C057;
   --c-candy-apple: #FF0800;
+  --c-light-slate-grey: #868e96;
   --border-radius-sm: 4px;
   --border-radius-md: 8px;
   --box-shadow-sm: 0 0 4px 0 rgb(0 0 0 / 25%);
