--- a/src/app/index.css
+++ b/src/app/index.css
@@ -53,6 +53,7 @@ body,
   text-size-adjust: 100%;
   background-color: var(--c-main-bg);
   color: var(--font-color);
+  overflow-x: hidden;
 }
 
 img,
