fix show full photo scroll

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -53,6 +53,9 @@ body,
   text-size-adjust: 100%;
   background-color: var(--c-main-bg);
   color: var(--font-color);
+}
+
+body {
   overflow-x: hidden;
 }
 
@@ -99,6 +102,10 @@ h6 {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border-width: 0;
+}
+
+.hidden {
+  overflow: hidden;
 }
 
 html:is(.light) {
