--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,15 +1,15 @@
-@import url("https://unpkg.com/open-props/easings.min.css");
+@import url('https://unpkg.com/open-props/easings.min.css');
 
 :root {
   --c-white: #fff;
   --c-black: #000;
-  --c-silver: #BDBDBD;
-  --c-white-smoke: #F2F2F2;
-  --c-weathered-stone: #C4C4C4;
-  --c-sunshine: #FFF200;
-  --c-sunset-orange: #FA5252;
-  --c-fruit-salad: #40C057;
-  --c-candy-apple: #FF0800;
+  --c-silver: #bdbdbd;
+  --c-white-smoke: #f2f2f2;
+  --c-weathered-stone: #c4c4c4;
+  --c-sunshine: #fff200;
+  --c-sunset-orange: #fa5252;
+  --c-fruit-salad: #40c057;
+  --c-candy-apple: #ff0800;
   --c-light-slate-grey: #868e96;
   --c-eerie-black: #1a1a1a;
   --c-snow: #f9f9f9;
@@ -123,6 +123,14 @@ h6 {
 
 .hidden {
   overflow: hidden;
+}
+
+.lock-scrollbar {
+  overflow-y: scroll !important;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 html:is(.light) {
