fix: nprogress bar background color

--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -41,7 +41,7 @@ body,
 }
 
 #nprogress .bar {
-  background: var(--c-sunshine);
+  background: var(--background-color-secondary);
   opacity: 0.75;
   position: fixed;
   z-index: 1031;
